--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         <h4>Posts</h4>
         <ul id="posts" class="posts nav">
             {% for post in site.posts limit: 5 %}
-            <li><a href="https://natsucam.github.io/jekyll-asciidoc-quickstart{{ post.url }}">{{ post.navtitle }}</a>{{page.root}} {{ post.url }}</li>
+            <li><a href="https://natsucam.github.io/jekyll-asciidoc-quickstart{{ post.url }}">{{ post.navtitle }}</a></li>
             {% endfor %}
         </ul>
 
